# autonomous-software-debugging-benchmarks

./: .gitignore  CAPABILITIES.md  EVALUATION.md  README.md  RUN_MODES.md
cpp/header_missing/: CMakeLists.txt  README.md
cpp/header_missing/include/: Components.h  Connection.h  Entity.h  GameState.h  GameTypes.h  Math.h  NetworkEngine.h  PacketHandler.h  World.h
cpp/header_missing/src/: helper.cpp  main.cpp
cpp/linker_error/: CMakeLists.txt  README.md
cpp/linker_error/include/: GameEngine.h
cpp/linker_error/src/: GameEngine.cpp  main.cpp
cpp/memory_issue/: CMakeLists.txt  README.md
cpp/memory_issue/include/: EntitySystem.h
cpp/memory_issue/src/: main.cpp
cross_domain/unity_node_contract/: README.md
cross_domain/unity_node_contract/server/: index.js  package.json
docs/: INSTRUCTOR_NOTES_TEMPLATE.md  SANITIZATION_GUIDE.md
go/concurrency_bug/: README.md  main.go
go/runtime_panic/: README.md  main.go
java/dependency_issue/: README.md  pom.xml
java/logic_error/: README.md  pom.xml
java/test_failure/: README.md  pom.xml
javascript/config_failure/: .env.example  README.md  package.json
javascript/config_failure/config/: default.json  development.json  production.json
javascript/config_failure/src/: migrate.js
javascript/frontend_backend_mismatch/: README.md
javascript/frontend_backend_mismatch/client/: package.json
javascript/frontend_backend_mismatch/server/: index.js  package.json
javascript/runtime_failure/: README.md  package.json
javascript/static_structural/: README.md  package.json  sample.json
javascript/test_failure/: README.md  package.json
kotlin/android_lifecycle/: README.md  build.gradle.kts
python/hypothesis_debugging/: README.md  monitor.py
python/multi_file_bug/: README.md  app.py  database.py  models.py  repository.py  schemas.py  test_api.py
python/runtime_failure/: README.md  config.json  engine.py  models.py  reporter.py
python/static_structural/: README.md  main.py
python/test_failure/: README.md  calculator.py  conversions.py  expression.py  statistics.py  test_calculator.py
scripts/: sanitize.ps1
swift/build_error/: Package.swift  README.md
swift/optionals_crash/: Package.swift  README.md
swift/ui_thread/: Package.swift  README.md
typescript/async_failures/: README.md  package.json
typescript/type_errors/: README.md  package.json  tsconfig.json
unity/lifecycle_bug/: README.md
unity/scene_mismatch/: README.md
unity/serialization_error/: README.md
(+104 files in other folders)
